// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`params decorators should add parameter metadata to a class when decorated with @params 1`] = `
Array [
  Array [
    ParamDecoratorFactory {
      "args": Array [],
      "handler": [Function],
    },
  ],
  Array [
    [Function],
    ParamDecoratorFactory {
      "args": Array [
        "cat",
      ],
      "handler": [Function],
    },
  ],
  Array [
    ParamDecoratorFactory {
      "args": Array [
        "headers",
      ],
      "handler": [Function],
    },
  ],
  Array [
    ParamDecoratorFactory {
      "args": Array [
        "consumerTag",
      ],
      "handler": [Function],
    },
  ],
]
`;

exports[`params decorators should add parameter metadata to a class when decorated with @params 2`] = `
Array [
  Array [
    ParamDecoratorFactory {
      "args": Array [],
      "handler": [Function],
    },
  ],
]
`;

exports[`params decorators should add parameter metadata to a class when decorated with @params and inherit 1`] = `
Array [
  Array [
    ParamDecoratorFactory {
      "args": Array [],
      "handler": [Function],
    },
  ],
  Array [
    [Function],
    ParamDecoratorFactory {
      "args": Array [
        "cat",
      ],
      "handler": [Function],
    },
  ],
  Array [
    ParamDecoratorFactory {
      "args": Array [
        "headers",
      ],
      "handler": [Function],
    },
  ],
  Array [
    ParamDecoratorFactory {
      "args": Array [
        "consumerTag",
      ],
      "handler": [Function],
    },
  ],
]
`;

exports[`params decorators should add parameter metadata to a class when decorated with @params and inherit 2`] = `
Array [
  Array [
    ParamDecoratorFactory {
      "args": Array [
        "lollol",
      ],
      "handler": [Function],
    },
  ],
]
`;
